# smiski

./: README.md  pyproject.toml  run.sh
src/: main.py
src/rooms/: room_a3a4.py  room_b3b4.py  room_c1c2.py  room_c3.py  room_c4d4.py  room_c5c6.py  room_d2e2.py  room_d3e3.py  room_e4.py
src/services/: events.py  interactions.py  inventory.py  rooms.py  settings.py
src/services/movement/: camera.py  coords.py  movement.py
src/services/ui/: buttons.py  dialog.py  end.py  menu.py  start.py
